--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
+- group: nannany_secret
   imageName: 'simple-application-azure:$(build.buildId)'
 
 steps:
